--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - tsc && vite build   # команда сборки
+  - yarn run build   # команда сборки
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
